syntax = "proto3";


option csharp_namespace = "Messanger.Client";

service Messanger{
    rpc SendMessage (MessageRequest) returns (Sended);
    rpc Login (LoginMessage) returns (UserToken);
}

message MessageRequest{
    string message = 1;
    string source_address = 2;
    string destination_address = 3;
}

message Sended{
    bool sended = 1;
}

message LoginMessage{
    string login = 1;
    string password = 2;
}
message UserToken{
    string token = 1;
}
